# rp2350-lfi-playground

./: .gitignore  LICENSE  README.md  deploy.sh  pyproject.toml  start_kiosk.sh  supervisor.py  supervisor_config.toml
firmware/: CMakeLists.txt  firmware.c
src/lfi_demo_server/: __init__.py  camera.py  camera_process.py  config.py  cypress_usb.py  delta_stage.py  demo_supervisor.py  hw_def.py  ina219.py  laser_pulser.py  lfi_demo_board.py  markdown_helper.py  server.py  stream_dispatcher.py  sx1509.py  system_utils.py
src/lfi_demo_server/assets/: about.md  camera_tuning.json  cypress_usb.h
src/lfi_demo_server/assets/static/: script.js  style.css
src/lfi_demo_server/assets/templates/: buttons.html  coordinates.html  current_plot.html  health.html  index.html  microscope.html  power_settings.html  serial_logs.html  source_code.html  success.html  supervisor_logs.html  title.html  toggles.html
src/lfi_demo_server/sangaboard/: extensible_serial_instrument.py  sangaboard.py
ui_tools/: input.css  tailwind_monitor.sh
