[project]
name = "lfi-demo-server"
version = "0.1.0"
description = ""
authors = [{ name = "courk", email = "courk@courk.cc" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "smbus2-asyncio @ git+https://github.com/jabdoa2/smbus2_asyncio@c1a141811f24c324f562a86255e4e55f3c43571b",
    "pyserial-asyncio (>=0.6,<0.7)",
    "typer (>=0.15.4,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "types-pygments (>=2.19.0.20250516,<3.0.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "types-cffi (>=1.17.0.20250523,<2.0.0.0)",
    "gpiod (>=2.3.0,<3.0.0)",
    "semantic-version (>=2.10.0,<3.0.0)",
    "markdown (>=3.8,<4.0)",
    "types-markdown (>=3.8.0.20250415,<4.0.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "types-psutil (>=7.0.0.20250601,<8.0.0.0)",
]

[project.optional-dependencies]
picamera = [
    "picamera2 (>=0.3.27,<0.4.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
] # Not needed on actual RPI

[tool.poetry]
packages = [{ include = "lfi_demo_server", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "D", "F", "N", "I001", "W"]
ignore = ["E501", "D213", "D203", "D102", "D105"]

[tool.ruff]
exclude = ["src/lfi_demo_server/sangaboard"]

[tool.mypy]
exclude = "src/lfi_demo_server/sangaboard"

[[tool.mypy.overrides]]
module = "gpio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "smbus2_asyncio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "serial_asyncio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "serial.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "picamera2.*"
ignore_missing_imports = true
